; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_ioperf.c_spin_for_duration.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_ioperf.c_spin_for_duration.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NSEC_PER_SEC = common dso_local global i64 0, align 8
@keep_going = common dso_local global i32 0, align 4
@memory_order_relaxed = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @spin_for_duration to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spin_for_duration(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %7 = load i64, i64* %2, align 8
  %8 = load i64, i64* @NSEC_PER_SEC, align 8
  %9 = mul nsw i64 %7, %8
  %10 = call i64 @nanos_to_abs(i64 %9)
  store i64 %10, i64* %3, align 8
  %11 = call i64 (...) @mach_absolute_time()
  store i64 %11, i64* %4, align 8
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* %4, align 8
  %14 = add nsw i64 %12, %13
  store i64 %14, i64* %5, align 8
  store i64 0, i64* %6, align 8
  br label %15

15:                                               ; preds = %25, %1
  %16 = call i64 (...) @mach_absolute_time()
  %17 = load i64, i64* %5, align 8
  %18 = icmp slt i64 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %15
  %20 = load i32, i32* @memory_order_relaxed, align 4
  %21 = call i64 @atomic_load_explicit(i32* @keep_going, i32 %20)
  %22 = icmp ne i64 %21, 0
  br label %23

23:                                               ; preds = %19, %15
  %24 = phi i1 [ false, %15 ], [ %22, %19 ]
  br i1 %24, label %25, label %28

25:                                               ; preds = %23
  %26 = load i64, i64* %6, align 8
  %27 = add nsw i64 %26, 1
  store i64 %27, i64* %6, align 8
  br label %15

28:                                               ; preds = %23
  ret void
}

declare dso_local i64 @nanos_to_abs(i64) #1

declare dso_local i64 @mach_absolute_time(...) #1

declare dso_local i64 @atomic_load_explicit(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
